# CodexPlusPlus-AdFree

./: .gitattributes  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_EN.md  THIRD_PARTY_NOTICES.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: release-assets.yml
apps/codex-plus-manager/: package-lock.json  package.json
apps/codex-plus-manager/src/: App.tsx  dream-skin.test.ts  dream-skin.ts  i18n-en.ts  presets.ts  styles.css
apps/codex-plus-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/codex-plus-manager/src-tauri/src/: commands.rs  lib.rs
apps/codex-plus-manager/src-tauri/tests/: windows_subsystem.rs
assets/inject/: renderer-inject.js
codex_session_delete/: helper_server.py
codex_session_delete/inject/: renderer-inject.js
crates/codex-plus-core/: Cargo.toml
crates/codex-plus-core/src/: ads.rs  app_paths.rs  assets.rs  bridge.rs  ccs_import.rs  cdp.rs  computer_use_guard.rs  diagnostic_log.rs  dream_skin.rs  dream_skin_library.rs  dream_skin_market.rs  dream_skin_runtime.rs  launcher.rs  lib.rs  paths.rs  protocol_proxy.rs  relay_config.rs  relay_switch.rs  script_market.rs  settings.rs  update.rs  user_scripts.rs  version.rs
crates/codex-plus-core/tests/: ads.rs  bridge_routes.rs  cdp_bridge.rs  dream_skin.rs  dream_skin_library.rs  dream_skin_market.rs  dream_skin_runtime.rs  launcher.rs  protocol_proxy.rs  relay_config.rs  relay_switch.rs  updater.rs  upstream_theme_assets.rs
crates/codex-plus-data/src/: provider_sync.rs
tests/: test_helper_server.py  test_renderer_script.py
tools/: i18n-keys.json
(+23 files in other folders)
